Fix z-index

--- a/site/resources/_src/scss/blocks/paintings/_paintings-content.scss
+++ b/site/resources/_src/scss/blocks/paintings/_paintings-content.scss
@@ -38,7 +38,7 @@
     &__image-box-info {
         position: absolute;
         opacity: 0;
-        z-index: 999;
+        z-index: 888;
         left: 0;
         right: 0;
         top: 0;
